@@ -1,7 +1,12 @@
 package com.team.exeteamup.mapper;
 
-import com.team.exeteamup.dto.response.GroupResponse;
+import com.team.exeteamup.dto.response.group.GroupCourseResponse;
+import com.team.exeteamup.dto.response.group.GroupMemberResponse;
+import com.team.exeteamup.dto.response.group.GroupResponse;
+import com.team.exeteamup.dto.response.group.TemplateResponse;
+import com.team.exeteamup.entity.Course;
 import com.team.exeteamup.entity.Group;
+import com.team.exeteamup.entity.GroupTemplate;
 import com.team.exeteamup.entity.User;
 import org.springframework.stereotype.Component;
 
@@ -14,30 +19,57 @@ public class GroupMapper {
     public GroupResponse toResponse(Group group) {
         if (group == null) return null;
 
-        Long leaderId = null;
-        List<Long> memberIds = List.of();
-
-        if (group.getUsers() != null && !group.getUsers().isEmpty()) {
-            leaderId = group.getUsers().stream()
+        GroupMemberResponse leader = null;
+        if (group.getUsers() != null) {
+            leader = group.getUsers().stream()
                     .filter(User::getIsLeader)
-                    .map(User::getUserId)
                     .findFirst()
+                    .map(user -> GroupMemberResponse.builder()
+                            .studentId(user.getUserId())
+                            .studentName(user.getFullName())
+                            .isLeader(true)
+                            .majorName(user.getMajor() != null ? user.getMajor().getMajorName() : null)
+                            .build())
                     .orElse(null);
+        }
 
-            memberIds = group.getUsers().stream()
-                    .filter(user -> !user.getIsLeader())
-                    .map(User::getUserId)
-                    .toList();
+        List<GroupMemberResponse> memberResponses = group.getUsers() == null ? List.of() :
+                group.getUsers().stream().map(user ->
+                        GroupMemberResponse.builder()
+                                .studentId(user.getUserId())
+                                .studentName(user.getFullName())
+                                .isLeader(user.getIsLeader())
+                                .majorName(user.getMajor() != null ? user.getMajor().getMajorName() : null)
+                                .build()
+                ).collect(Collectors.toList());
+
+        GroupCourseResponse courseResponse = null;
+        if (group.getCourse() != null) {
+            Course course = group.getCourse();
+            courseResponse = GroupCourseResponse.builder()
+                    .courseId(course.getCourseId())
+                    .courseCode(course.getCourseCode())
+                    .build();
+        }
+
+        TemplateResponse templateResponse = null;
+        if (group.getGroupTemplate() != null) {
+            GroupTemplate template = group.getGroupTemplate();
+            templateResponse = TemplateResponse.builder()
+                    .maxMember(template.getMaxMember())
+                    .template(template.getTemplate())
+                    .build();
         }
 
         return GroupResponse.builder()
                 .groupId(group.getGroupId())
                 .groupName(group.getGroupName())
-                .leaderId(leaderId)
-                .memberIds(memberIds)
+                .leader(leader)
+                .members(memberResponses)
+                .templates(templateResponse)
                 .memberCount(group.getUsers() != null ? group.getUsers().size() : 0)
-                .courseId(group.getCourse().getCourseId())
                 .groupStatus(group.getGroupStatus())
+                .course(courseResponse)
                 .build();
     }
 
@@ -48,11 +80,21 @@ public class GroupMapper {
     }
 
     public GroupResponse toCourseResponse(Group group) {
+        if (group == null) return null;
+
+        GroupCourseResponse courseResponse = null;
+        if (group.getCourse() != null) {
+            courseResponse = GroupCourseResponse.builder()
+                    .courseId(group.getCourse().getCourseId())
+                    .courseCode(group.getCourse().getCourseCode())
+                    .build();
+        }
+
         return GroupResponse.builder()
                 .groupId(group.getGroupId())
                 .groupName(group.getGroupName())
                 .memberCount(group.getUsers() != null ? group.getUsers().size() : 0)
-                .courseId(group.getCourse() != null ? group.getCourse().getCourseId() : null)
+                .course(courseResponse)
                 .build();
     }
 }
